Add Capital One experience
Move Professional experience to the front and push education to the
back. Many other modifications

--- a/GhaithHaddadResume.tex
+++ b/GhaithHaddadResume.tex
@@ -3,72 +3,32 @@
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
 
+\usepackage{hyperref}
+
 \begin{document}
 
 \name{Ghaith Haddad}
 % \address used twice to have two lines of address
 %\address{423 Silverton Pl., Piscataway, NJ}
-\address{          407.601.9424 - haddad@ieee.org}
+\address{407.601.9424 - haddad@ieee.org}
 
 \begin{resume}
  
 \section{OBJECTIVE}
-A challenging position in Computer Engineering/Computer Science.
-
-\section{EDUCATION}
-{\sl Ph.D.}, Computer Engineering \\
-University of Central Florida, Orlando, FL \hfill
-Dec 2012 \vspace{0.05in} \\ 
-Research in Java Modeling Language (JML), a behavioral specification language,
-and extensible Java compilers. Particularly in developing Timing Analysis
-for Safety-Critical Java Systems. Dissertation ``Specification and Runtime
-Checking of Timing Constraints in Safety Critical Java''.
-
-{\sl M.Sc.}, Computer Engineering - Digital Systems \\
-University of Central Florida, Orlando, FL \hspace{0.2in}  \hfill
-May 2007 \vspace{0.05in} \\ 
-Classes include high performance computer architecture, high performance
-storage systems, advanced computer security, wireless \& computer networks, FPGA
-design and full custom VLSI.
-
-{\sl Bachelor of Science}, Electrical and Computer Engineering \\ 
-Jordan University of Science And Technology, Irbid, Jordan       \hfill    Jan
-2001 \vspace{0.05in} \\
-GPA 84.2\% (Excellent) \\
-Ranked 4 among 121 students graduated in the same academic year, and 1$^{st}$
-among semester graduates. Honor-Student Enrollment.
-
-{\sl General Secondary Certificate (Tawjihi)} \\
-Irbid Secondary School, Irbid, Jordan \hspace{0.2in}  GPA 94.7\% \hfill
-June 1996 \vspace{0.05in} \\  
-Ranked in top 1\%.
-
-\section{SOFTWARE \\ PROFICIENCY}
-{\sl Programming languages:} Java, Swing, J2EE, JML, Python, C,C\#, C++, Visual
-Basic 6 and .NET, Oz. \\
-{\sl Database:} HBase, MySQL, ORACLE, MS-Access, SQL Server. \\
-{\sl Hardware Design:} Verilog. \\
-{\sl Embedded Programming:} Microchip, Freescale, ST. \\
-{\sl Internet programming:} HTML, XML, Python, Perl, AJAX, Javascript. \\
-{\sl Operating systems:} Windows, Linux, Palm OS. \\
-{\sl Networks Programming:} TCP/IP, 802.15.4 (Zigbee). \\
-{\sl ALM:} TeamForge, Jira, HPQC, ClearQuest. \\
-{\sl Source Control:} Git, SVN, ClearCase, CVS. \\
-{\sl Object Oriented Design:} UML, MS Visio, Rational Rose, RequisitePro. \\
-{\sl Project Management:} MS Project, TeamForge.
+A challenging position in IT.
 
 \section{PROFESSIONAL \& EDUCATIONAL EXPERIENCE}
 
 {\sl Manager, Software Development} \hfill        Oct. 2013 - Current  \\
-Capital One Financials, Wilmington, DE \\
-  \textit{Architecture \& Design, Java, Agile Development.}
+Capital One, Wilmington, DE \\
+  \textit{Agile Development Manager, Architecture \& Design, Java, API Development.}
   \begin{itemize} \itemsep -2pt % reduce space between items
-      \item  Lead an Agile Sprint team to deliver bank projects in the Customer 
-      security domain.
-      \item  Interact with stakeholders and business owners to deliver the product 
-      per intent.
-      \item  Recently took the role of Technical Product Owner, with more exposure to 
-      business counterparts and other verticals in the organization.
+      \item  Lead Agile Sprint teams to deliver bank projects for Customer 
+      security \& Small Business systems.
+      \item  Interacted with stakeholders and business owners to deliver the required product 
+      in an Agile environment and per intent.
+      \item  Built APIs to integrate with different technologies and platforms across the enterprise as well as third party services.
+      \item  Managed staffing for my Agile teams.
  \end{itemize}
 
 {\sl Manager, Smart Grid Development} \hfill        Jun. 2010 - Sep. 2013  \\
@@ -201,6 +161,48 @@ INFINITYdezign, Irbid, Jordan \\
      design.
 \end{itemize} 
 
+\section{EDUCATION}
+{\sl Ph.D.}, Computer Engineering \\
+University of Central Florida, Orlando, FL \hfill
+Dec 2012 \vspace{0.05in} \\ 
+Research in Java Modeling Language (JML), a behavioral specification language,
+and extensible Java compilers. Particularly in developing Timing Analysis
+for Safety-Critical Java Systems. Dissertation ``Specification and Runtime
+Checking of Timing Constraints in Safety Critical Java''.
+
+{\sl M.Sc.}, Computer Engineering - Digital Systems \\
+University of Central Florida, Orlando, FL \hspace{0.2in}  \hfill
+May 2007 \vspace{0.05in} \\ 
+Classes include high performance computer architecture, high performance
+storage systems, advanced computer security, wireless \& computer networks, FPGA
+design and full custom VLSI.
+
+{\sl Bachelor of Science}, Electrical and Computer Engineering \\ 
+Jordan University of Science And Technology, Irbid, Jordan       \hfill    Jan
+2001 \vspace{0.05in} \\
+GPA 84.2\% (Excellent) \\
+Ranked 4 among 121 students graduated in the same academic year, and 1$^{st}$
+among semester graduates. Honor-Student Enrollment.
+
+{\sl General Secondary Certificate (Tawjihi)} \\
+Irbid Secondary School, Irbid, Jordan \hspace{0.2in}  GPA 94.7\% \hfill
+June 1996 \vspace{0.05in} \\  
+Ranked in top 1\%.
+
+\section{SOFTWARE \\ PROFICIENCY}
+{\sl Programming languages:} Java, J2EE, Python, C,C\#, C++, Visual
+Basic 6 and .NET, Perl, Oz. \\
+{\sl Database:} HBase, MySQL, ORACLE, MongoDB, MS-Access, SQL Server. \\
+{\sl Hardware Design:} Verilog. \\
+{\sl Embedded Programming:} Microchip, Freescale, ST. \\
+{\sl Internet programming:} Javascript, HTML, Python, AJAX. \\
+{\sl Operating systems:} Windows, Linux, Palm OS. \\
+{\sl Networks Programming:} TCP/IP, 802.15.4 (Zigbee). \\
+{\sl ALM/Agile tools:} Version One, TeamForge, Jira, HPQC, ClearQuest. \\
+{\sl Source Control:} Git, SVN, ClearCase, CVS. \\
+{\sl Object Oriented Design:} UML, MS Visio, Rational Rose, RequisitePro. \\
+{\sl Project Management:} MS Project, TeamForge.
+
 \section{PUBLICATIONS}
 \begin{itemize} \itemsep -2pt
      \item Alatrash, H.; Mensah, A.; Mark, E.; Haddad, G.; Enslin, J.; ,
@@ -274,6 +276,24 @@ INFINITYdezign, Irbid, Jordan \\
 \end{itemize} 
 
 \section{PROJECTS OF INTEREST}
+
+{\sl Single Sign On (SSO) for Capital One Direct Bank Customers} \hfill   2014 \\
+\begin{itemize} \itemsep -2pt
+     \item Provide Direct Bank customers with a single sign on experience 
+            that supports other lines of business.
+     \item Siggnificant customer impact (7M+).
+     \item Led an Agile team to develop the UX.
+     \item Front-end integrated with a handful of back-end systems through APIs.
+\end{itemize} 
+
+{\sl PSE\&G Pole-Mount distributed solar and two-way communication} \hfill   2009-2012 \\
+\begin{itemize} \itemsep -2pt
+     \item Largest Distributed Solar Energy project at the time (\$200M).
+     \item Lead a software development team and managed an outsourced team 
+            to develop two-way end to end communication and a backend solution with 
+            a front-end customer-facing full UX.
+\end{itemize} 
+
 {\sl eBOS - the eBook Operating System} \hfill   2007 \\
 \begin{itemize} \itemsep -2pt
      \item An electronic book that includes many helpful features for students.
