Updated Continuing Education classes

--- a/GhaithHaddadResume.tex
+++ b/GhaithHaddadResume.tex
@@ -9,8 +9,8 @@
 
 \name{Ghaith Haddad}
 % \address used twice to have two lines of address
-%\address{423 Silverton Pl., Piscataway, NJ}
-\address{407.601.9424 - haddad@ieee.org}
+%\address{123 Sesame street, Sometown, AB}
+\address{407.601.9424 - ghaitho@gmail.com}
 
 \begin{resume}
  
@@ -21,14 +21,14 @@ A challenging position in IT.
 
 {\sl Manager, Software Development} \hfill        Oct. 2013 - Current  \\
 Capital One, Wilmington, DE \\
-  \textit{Agile Development Manager, Architecture \& Design, Java, API Development.}
+  \textit{Agile, Architecture \& Design, Java, APIs.}
   \begin{itemize} \itemsep -2pt % reduce space between items
       \item  Lead Agile Sprint teams to deliver bank projects for Customer 
       security \& Small Business systems.
       \item  Interacted with stakeholders and business owners to deliver the required product 
       in an Agile environment and per intent.
       \item  Built APIs to integrate with different technologies and platforms across the enterprise as well as third party services.
-      \item  Managed staffing for my Agile teams.
+      \item  Managed staffing for Agile teams.
  \end{itemize}
 
 {\sl Manager, Smart Grid Development} \hfill        Jun. 2010 - Sep. 2013  \\
@@ -140,7 +140,7 @@ Systems and Electronic Development Co. (SEDCO), Amman, Jordan \\
 General Center for Software Development (GCESoft), Amman, Jordan \\
 \textit{Palm Operating System, C, MS-Access.}
 \begin{itemize} \itemsep -2pt
-     \item Developed a Van Sales system on a Symbol® SPT1700 machine. 
+     \item Developed a Van Sales system on a SymbolÂ® SPT1700 machine. 
      \item Developed a software module for infrared communication with a
      portable printer for embedded solutions on handheld devices.
      \item Deployed the system on 3 different sites.
@@ -261,6 +261,11 @@ Basic 6 and .NET, Perl, Oz. \\
 
 \section{CONTINUING EDUCATION CLASSES}
 \begin{itemize} \itemsep -2pt
+     \item Inclusive Leadership, Capital One, Nov 2015.
+     \item Behavioral Interviewing, Capital One, Mar 2015.
+     \item Creative Decision Making and Problem Solving, Capital One, Feb 2015.
+     \item Scaled Agile Framework (SAFe), Capital One, Jan 2015.
+     \item Agile: SAFe Product Manager/Product Owner, Capital One, Jan 2015.
      \item Essentials of Management, Petra Solar, Oct-Nov 2011.
      \item Managing within the Law, Petra Solar, June 3rd 2010.
      \item Low-Power Product Design Seminar, Freescale, April 15, 2009.
@@ -327,7 +332,7 @@ Basic 6 and .NET, Perl, Oz. \\
      \item Intended to help students gain basic concepts of circuit analysis and
      applications.
      \item Developed by a team of faculty and students at UCF, using
-     HTML and VB.NET – http://www.ecircuits.cecs.ucf.edu
+     HTML and VB.NET Â– http://www.ecircuits.cecs.ucf.edu
      \item Supervisor: Dr. Issa Batarseh, Director of Electrical
      Engineering \& Computer Science - batarseh@mail.ucf.edu. Project Manager:
      Dr. Jaber Abu Qahouq, jaberq@ieee.org
