Add new short version, modify long version

--- a/GhaithHaddadResume.tex
+++ b/GhaithHaddadResume.tex
@@ -1,7 +1,7 @@
 % LaTeX resume using res.cls
 \documentclass[line,margin]{res}
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
-%\usepackage{newcent}   % uses new century schoolbook postscript font 
+%\usepackage{newcent}   % uses new century schoolbook postscript font
 
 \usepackage{hyperref}
 
@@ -13,19 +13,32 @@
 \address{407.601.9424 - ghaitho@gmail.com}
 
 \begin{resume}
- 
+
 \section{OBJECTIVE}
-A challenging position in IT.
+A challenging position in Technology.
 
 \section{PROFESSIONAL \& EDUCATIONAL EXPERIENCE}
 
-{\sl Manager, Software Development} \hfill        Oct. 2013 - Current  \\
+{\sl Sr. Manager, Technology} \hfill        Nov. 2015 - Current  \\
+The Walt Disney Company, Orlando, FL \\
+  \textit{Park Operations Technology, IoT, Cloud Technologies}
+  \begin{itemize} \itemsep -2pt % reduce space between items
+      \item  Managed the Park Operations Technology Portfolio with 100+ Apps and
+      multiple lines of business.
+      \item Managed several Software Development and Sustainment teams.
+      \item Drove the IoT initiative for Park Operations.
+      \item Managed Portfolio Rationalization effort to optimize the Park Operations
+      Applications.
+      \item oversaw hiring and internships.
+ \end{itemize}
+
+{\sl Manager, Software Development} \hfill        Oct. 2013 - Nov. 2015  \\
 Capital One, Wilmington, DE \\
   \textit{Agile, Architecture \& Design, Java, APIs.}
   \begin{itemize} \itemsep -2pt % reduce space between items
-      \item  Lead Agile Sprint teams to deliver bank projects for Customer 
+      \item  Lead Agile Sprint teams to deliver bank projects for Customer
       security \& Small Business systems.
-      \item  Interacted with stakeholders and business owners to deliver the required product 
+      \item  Interacted with stakeholders and business owners to deliver the required product
       in an Agile environment and per intent.
       \item  Built APIs to integrate with different technologies and platforms across the enterprise as well as third party services.
       \item  Managed staffing for Agile teams.
@@ -63,7 +76,7 @@ Petra Solar Inc., South Plainfield, NJ \\
       an influential entity on the Standards being developed to support emerging
       technologies.
  \end{itemize}
- 
+
 {\sl Lead Software Engineer} \hfill        Jul. 2008 - May 2010  \\
 Petra Solar Inc., South Plainfield, NJ \\
 \textit{C, Java, .NET, MySQL, Tomcat, Python, Zigbee technologies.}
@@ -90,7 +103,7 @@ Petra Solar Inc., South Plainfield, NJ \\
      existing networks and third party devices, by leveraging existing networks
      to act as a backbone for Petra Solar communication, or by leveraging Petra
      Solar Data Communicators to accept third party devices.
-\end{itemize} 
+\end{itemize}
 
 {\sl Graduate Research/Teaching Assistant} \hfill   Sep. 2007 - Sep. 2009 \\
 University of Central Florida, Orlando, FL \\
@@ -100,12 +113,12 @@ University of Central Florida, Orlando, FL \\
      \item Research on JML (Java Modeling Language) and extensible Java
      Compilers.
      \item Supervisor - Dr. Gary Leavens.
-\end{itemize} 
+\end{itemize}
 
 {\sl Graduate Assistant - Research \& Development Engineer} \hfill    Jul. 2006
 - Aug. 2007 \\
 Institute for Simulation and Training (IST), University of Central Florida,
-Orlando, FL \\ 
+Orlando, FL \\
 \textit{ASP.NET,VB.NET, C\#, MS Access, Windows Mobile 5.0.}
 \begin{itemize} \itemsep -2pt
      \item Developed Virtual Check Ride System, a testing system that automates
@@ -115,7 +128,7 @@ Orlando, FL \\
      collects data resulted from simulated environments and compares it with
      previously collected data to measure the level of profession for drivers.
      \item Developed a work order system on Windows Mobile 5.0.
-\end{itemize} 
+\end{itemize}
 
 {\sl Research and Development Engineer - Product Team Leader} \hfill   2002 -
 2005 \\
@@ -126,7 +139,7 @@ Systems and Electronic Development Co. (SEDCO), Amman, Jordan \\
      clients. Now used by more than 30 different Arabic news agencies and
      newspapers.
      \item Developed FTR (Full Text Retrieval) Engine over MediaWorx (a fast,
-     reliable and advanced search engine supporting Arabic language 
+     reliable and advanced search engine supporting Arabic language
      functionality).
      \item Deployed MediaWorx at multiple sites in UAE, KSA and Syria. This
      included installing, training, troubleshooting, and developing
@@ -134,24 +147,24 @@ Systems and Electronic Development Co. (SEDCO), Amman, Jordan \\
      \item Promoted to team leader for Content Management Solutions team
      responsible for analysis, design and development for the communication
      engine for the new products.
-\end{itemize} 
+\end{itemize}
 
 {\sl Research and Development Engineer} \hfill   2001 - 2002 \\
 General Center for Software Development (GCESoft), Amman, Jordan \\
 \textit{Palm Operating System, C, MS-Access.}
 \begin{itemize} \itemsep -2pt
-     \item Developed a Van Sales system on a Symbol® SPT1700 machine. 
+     \item Developed a Van Sales system on a Symbol® SPT1700 machine.
      \item Developed a software module for infrared communication with a
      portable printer for embedded solutions on handheld devices.
      \item Deployed the system on 3 different sites.
-\end{itemize} 
+\end{itemize}
 
 {\sl Part-time Lecturer} \hfill   2000 - 2001 \\
 Multiple Computer Training Centers, Amman, Jordan \\
 \textit{Visual Basic, Web development and design.}
 \begin{itemize} \itemsep -2pt
      \item Prepared materials and gave lectures on VB 6 and web development.
-\end{itemize} 
+\end{itemize}
 
 {\sl Software Developer} \hfill   1999 - 2000 \\
 INFINITYdezign, Irbid, Jordan \\
@@ -159,12 +172,12 @@ INFINITYdezign, Irbid, Jordan \\
 \begin{itemize} \itemsep -2pt
      \item Developed DB connectivity and data retrieval for FLASH-based web
      design.
-\end{itemize} 
+\end{itemize}
 
 \section{EDUCATION}
 {\sl Ph.D.}, Computer Engineering \\
 University of Central Florida, Orlando, FL \hfill
-Dec 2012 \vspace{0.05in} \\ 
+Dec 2012 \vspace{0.05in} \\
 Research in Java Modeling Language (JML), a behavioral specification language,
 and extensible Java compilers. Particularly in developing Timing Analysis
 for Safety-Critical Java Systems. Dissertation ``Specification and Runtime
@@ -172,12 +185,12 @@ Checking of Timing Constraints in Safety Critical Java''.
 
 {\sl M.Sc.}, Computer Engineering - Digital Systems \\
 University of Central Florida, Orlando, FL \hspace{0.2in}  \hfill
-May 2007 \vspace{0.05in} \\ 
+May 2007 \vspace{0.05in} \\
 Classes include high performance computer architecture, high performance
 storage systems, advanced computer security, wireless \& computer networks, FPGA
 design and full custom VLSI.
 
-{\sl Bachelor of Science}, Electrical and Computer Engineering \\ 
+{\sl Bachelor of Science}, Electrical and Computer Engineering \\
 Jordan University of Science And Technology, Irbid, Jordan       \hfill    Jan
 2001 \vspace{0.05in} \\
 GPA 84.2\% (Excellent) \\
@@ -186,7 +199,7 @@ among semester graduates. Honor-Student Enrollment.
 
 {\sl General Secondary Certificate (Tawjihi)} \\
 Irbid Secondary School, Irbid, Jordan \hspace{0.2in}  GPA 94.7\% \hfill
-June 1996 \vspace{0.05in} \\  
+June 1996 \vspace{0.05in} \\
 Ranked in top 1\%.
 
 \section{SOFTWARE \\ PROFICIENCY}
@@ -243,21 +256,21 @@ Basic 6 and .NET, Perl, Oz. \\
      \item G. Haddad and D. Turgut. ``DSASim: A simulation
      framework for dynamic spectrum allocation.'' Proceedings of IEEE Wireless
      Communications and Networking Conference (WCNC), March 2007.
-\end{itemize} 
+\end{itemize}
 
 \section{PATENTS}
 \begin{itemize} \itemsep -2pt
      \item Haddad, G. 2011. ''Mesh Network Fragmented Upgrade Method.''
-     Publication Number WO2013006690, PCT Application Patent No. 
-     PCT/US2012/045532, filed July 5, 2012 and published May 8, 2014. 
+     Publication Number WO2013006690, PCT Application Patent No.
+     PCT/US2012/045532, filed July 5, 2012 and published May 8, 2014.
      \item Batarseh, I., Shoubaki, I., Harb, S., Haddad, G. 2012. ''Sybmolic
-     Switch/Linear Circuit Simulator(SymCir).'' U.S. Patent 8,219,374, filed 
+     Switch/Linear Circuit Simulator(SymCir).'' U.S. Patent 8,219,374, filed
      February 21, 2008, and issued July 10, 2012.
      \item Batarseh, I., Haddad, G., Oreifej, R., Al-Haddad, R. 2013
      ''Interactive Electronic Book Operating Systems and Methods.''
      U.S. Patent 8,352,876, filed February 21, 2008, and issued January 8,
      2012.
-\end{itemize} 
+\end{itemize}
 
 \section{CONTINUING EDUCATION CLASSES}
 \begin{itemize} \itemsep -2pt
@@ -278,26 +291,26 @@ Basic 6 and .NET, Perl, Oz. \\
      Technology, Nov. 2000 - June 2001.
      \item ORACLE Developer, Mansi Technology Center, Dec. 2000.
      \item ORACLE DBA, Mansi Technology Center, April 2001.
-\end{itemize} 
+\end{itemize}
 
 \section{PROJECTS OF INTEREST}
 
 {\sl Single Sign On (SSO) for Capital One Direct Bank Customers} \hfill   2014 \\
 \begin{itemize} \itemsep -2pt
-     \item Provide Direct Bank customers with a single sign on experience 
+     \item Provide Direct Bank customers with a single sign on experience
             that supports other lines of business.
      \item Siggnificant customer impact (7M+).
      \item Led an Agile team to develop the UX.
      \item Front-end integrated with a handful of back-end systems through APIs.
-\end{itemize} 
+\end{itemize}
 
 {\sl PSE\&G Pole-Mount distributed solar and two-way communication} \hfill   2009-2012 \\
 \begin{itemize} \itemsep -2pt
      \item Largest Distributed Solar Energy project at the time (\$200M).
-     \item Lead a software development team and managed an outsourced team 
-            to develop two-way end to end communication and a backend solution with 
+     \item Lead a software development team and managed an outsourced team
+            to develop two-way end to end communication and a backend solution with
             a front-end customer-facing full UX.
-\end{itemize} 
+\end{itemize}
 
 {\sl eBOS - the eBook Operating System} \hfill   2007 \\
 \begin{itemize} \itemsep -2pt
@@ -306,7 +319,7 @@ Basic 6 and .NET, Perl, Oz. \\
      \item Supervisor: Dr. Issa Batarseh, Director of Electrical Engineering \&
      Computer Science - batarseh@mail.ucf.edu.
      \item U.S. Patent 8,352,876.
-\end{itemize} 
+\end{itemize}
 
 {\sl eTutor - Interactive Electrical Circuits Tutoring Tool} \hfill   2007 \\
 \begin{itemize} \itemsep -2pt
@@ -316,7 +329,7 @@ Basic 6 and .NET, Perl, Oz. \\
      \item Developed in Java.
      \item Supervisor: Dr. Issa Batarseh, Director of Electrical Engineering \&
      Computer Science - batarseh@mail.ucf.edu.
-\end{itemize} 
+\end{itemize}
 
 {\sl Symbolic Circuits Solver } \hfill   2006 \\
 \begin{itemize} \itemsep -2pt
@@ -325,7 +338,7 @@ Basic 6 and .NET, Perl, Oz. \\
      \item Developed using Java.
      \item Supervisor: Dr. Issa Batarseh, Director of Electrical Engineering \&
      Computer Science - batarseh@mail.ucf.edu.
-\end{itemize} 
+\end{itemize}
 
 {\sl Introduction to Electrical Circuits Website} \hfill   2006 \\
 \begin{itemize} \itemsep -2pt
@@ -336,7 +349,7 @@ Basic 6 and .NET, Perl, Oz. \\
      \item Supervisor: Dr. Issa Batarseh, Director of Electrical
      Engineering \& Computer Science - batarseh@mail.ucf.edu. Project Manager:
      Dr. Jaber Abu Qahouq, jaberq@ieee.org
-\end{itemize} 
+\end{itemize}
 
 {\sl Marathon Results Manager} \hfill   2002 \\
 \begin{itemize} \itemsep -2pt
@@ -347,7 +360,7 @@ Basic 6 and .NET, Perl, Oz. \\
      and arrival and generate results reports and certificates for the runners
      based on runner category and run type.
      \item Implemented in C (Palm OS) and MS Access.
-\end{itemize} 
+\end{itemize}
 
 {\sl Arabic Root Extractor} \hfill   2001 \\
 \begin{itemize} \itemsep -2pt
@@ -357,7 +370,7 @@ Basic 6 and .NET, Perl, Oz. \\
      \item Graduation project. Rated as one of the best graduation projects
      presented.
      \item Supervisor, Dr. Taisir Eldos. Team members, Eng. Khalid Ajlouny.
-\end{itemize} 
+\end{itemize}
 
 {\sl Irbid Municipality Website} \hfill   2000 \\
 \begin{itemize} \itemsep -2pt
@@ -368,14 +381,14 @@ Basic 6 and .NET, Perl, Oz. \\
      \item The website was designed by INFINITYdezign.
      \item Implemented the server-side scripts. A guest book, a search engine,
      a feedback form. All written in \textit{Perl}.
-\end{itemize} 
+\end{itemize}
 
 {\sl Arabic Version Website, The Special Program for Food Security - SPFS - FAO}
 \hfill   1997 \\
 \begin{itemize} \itemsep -2pt
      \item Designed using HTML. URL: www.fao.org/spfs
      \item Supervisor, Prof. Bassam Snobar.
-\end{itemize} 
+\end{itemize}
 
 \section{PROFESSIONAL AFFILIATIONS}
 \begin{itemize} \itemsep -2pt
@@ -384,7 +397,7 @@ Basic 6 and .NET, Perl, Oz. \\
      \item IEEE - since 1997.
      \item IEEE Computer Society.
      \item ACM - since 2007.
-\end{itemize} 
+\end{itemize}
 
 \section{OTHER INTERESTS}
 \begin{itemize} \itemsep -2pt
@@ -393,12 +406,8 @@ Basic 6 and .NET, Perl, Oz. \\
      \item Worked on a charity's staff for the Dead Sea Ultra Marathon, as a
      results manager for all events that took place 2002-2005.
      \item Playing music and singing.
-\end{itemize} 
+\end{itemize}
 
 
 \end{resume}
 \end{document}
-
-
-
-
